<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MaterialComponentsActivity"
    tools:ignore="ContentDescription,RelativeOverlap">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/title_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#77ddddff"
        android:elevation="10dp"
        android:padding="10dp"
        app:subtitle="@string/material_subtitle"
        app:title="@string/material_title" />

    <TextView
        android:id="@+id/text_shadow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button1"
        android:layout_below="@id/title_shadow"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="#77ffffff"
        android:elevation="8dp"
        android:outlineProvider="background"
        android:padding="10dp"
        android:text="@string/material_summary" />

    <View
        android:id="@+id/center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fab1"
        android:layout_alignEnd="@id/center"
        android:layout_margin="10dp"
        android:backgroundTint="#77aaaaaa" />

    <Button
        android:id="@+id/button2_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fab2_shadow"
        android:layout_alignStart="@id/center"
        android:layout_margin="10dp"
        android:backgroundTint="#77aaaaaa" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        app:backgroundTint="#77aaaaaa" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab2_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        app:backgroundTint="#77aaaaaa" />

</RelativeLayout>